--- a/waveOn/static/style.css
+++ b/waveOn/static/style.css
@@ -174,7 +174,7 @@ body {
 
 .modal_header {
     /*background-color: mistyrose;*/
-    border: 1px solid grey;
+    /*border: 1px solid grey;*/
     display: flex;
     justify-content: space-between;
     padding: 10px;
@@ -222,7 +222,7 @@ body {
 .modal_detail {
     width: 100%;
     position: absolute;
-    background-color: lavender;
+    /*background-color: lavender;*/
     top: 50%;
     left: 0;
     margin: 0;
