--- a/waveOn/templates/index.html
+++ b/waveOn/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>웨이브</title>
     <link rel="stylesheet" href="/static/style.css">
     <script type="text/javascript">
@@ -280,7 +280,7 @@
     <li><a href="#" onclick="clickBeachBlock('TW_0092')">임랑 해수욕장</a>
 
     </li>
-    <li><a href="#" onclick="clickBeachBlock(' HB_0001')">기장 해수욕장</a>
+    <li><a href="#" onclick="clickBeachBlock('HB_0001')">기장 해수욕장</a>
 
     </li>
     </li>
